# due

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  build.rs  slint.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.rgba
docs/: prd-cicd.md  prd-reminder-app.md
docs/adr/: 0001-slint-gui-framework.md
docs/issues/: 0001-project-init-reminder-model-storage.md  0002-config-management.md  0003-time-parsing-onetime-reminder.md  0004-recurring-reminder-time-range.md  0005-system-notification.md  0006-reminder-popup-user-actions.md  0007-system-tray.md  0008-gui-main-interface.md
src/: config.rs  lib.rs  logging.rs  main.rs  notification.rs  popup.rs  reminder.rs  store.rs  time.rs  tray.rs  ui.rs
tests/: integration_lifecycle.rs
ui/: main.slint
