[package]
name = "due"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify-rust = "4"
tray-icon = "0.19"
muda = "0.15"
slint = "1.9"

[build-dependencies]
slint-build = "1.9"
